[metadata]

name = paddlepalm

author = zhangyiming
author_email = zhangyiming04@baidu.com

version = 2.1.0

description = PaddlePALM
long_description = file: README.md
long_description_content_type = text/markdown

home_page = https://github.com/PaddlePaddle/PALM
license = Apache 2.0

classifier =
    Private :: Do Not Upload
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

keywords =
    paddlepaddle
    paddle
    nlp
    pretrain
    multi-task-learning

[options]

packages = find:

include_package_data = True
zip_safe = False

[sdist]
dist_dir = output/dist

[bdist_wheel]
dist_dir = output/dist

[easy_install]
index_url = http://pip.baidu.com/root/baidu/+simple/



